final changes to html and CSS, added content to readMe file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anthony DeMatteo</title>
-    <link href="C:\Users\antde\Desktop\homework\CSS-Portfolio-HW\style.css" rel="Stylesheet" />
+    <link href="C:\Users\antde\Desktop\homework\CSS-Portfolio-HW\assets\style.css" rel="Stylesheet" />
 </head>
 
 <body>
@@ -28,7 +28,7 @@
             </div>
             <div id="about-content">
                 <div id="left">
-                    <img src="selfie.JPG" alt="Selfie" height="550px" width="350px">
+                    <img src="pictures\selfie.JPG" alt="Selfie" height="550px" width="350px">
                 </div>
                 <div id="right">
                     <p>I graduated with a business degree from RCSJ. Now, I am an aspiring full-time coder, and I look forward to adding to my portfolio!</p>
